# simple-postgres-fastapi-chat

./: .env.bak  Containerfile  Dockerfile  LICENSE  README.md  alembic.ini  compose.yml  k8s-manifests.yaml  kind-config.yaml  pyproject.toml
.docker/postgresql/: init.sh
app/: database.py  main.py  models.py  utils.py
migrations/: env.py
migrations/versions/: 9152b24fc6d1_initial_migration.py
